--- a/relinksys/web/src/app/admin/employee/employee.component.html
+++ b/relinksys/web/src/app/admin/employee/employee.component.html
@@ -171,7 +171,7 @@
                                         </div>
                                          <div class="col-md-3 col-sm-6 col-6 ">
                                             <mat-slide-toggle type="ratio" name="IsGetReport" color="primary"
-                                                [(ngModel)]="data.IsGetReport" class="example-margin"> IsGetReport 
+                                                [(ngModel)]="data.IsGetReport" class="example-margin"> Report E-mail 
                                             </mat-slide-toggle>
                                         </div>
                                     </div>
