--- a/garment/web/src/app/sale/bill/bill.component.css
+++ b/garment/web/src/app/sale/bill/bill.component.css
@@ -134,7 +134,7 @@ input::-webkit-inner-spin-button {
     box-shadow: 2px 2px 6px #9c9795fa;
 }
 
-button:disabled .deletes_icon {
+button:disabled .deletes_icon , button:disabled .edit_icon1{
     background-color: #bdbdbd;
     color: #878787;
 }
@@ -278,10 +278,22 @@ button:disabled .deletes_icon {
 button:disabled.whatsappBill {
 background-color: #e0e0e0 !important;
     color: #ababab !important;
+     box-shadow: 0px 0px 1px #0003;
 }
 
 button:disabled.whatsappfBill {
 background-color: #e0e0e0 !important;
+    color: #ababab !important;
+         box-shadow: 0px 0px 1px #0003;
+}
+button:disabled.EmailBill {
+background-color: #e0e0e0 !important;
+    color: #ababab !important;
+         box-shadow: 0px 0px 1px #0003;
+}
+
+button:disabled.EmailBill1 {
+    background-color: #e0e0e0 !important;
     color: #ababab !important;
 }
 
@@ -329,19 +341,21 @@ background-color: #e0e0e0 !important;
     }
 
     .table-total-new table,  .table-total-new  th,  .table-total-new  td{
- border: 1px solid #ff5100;
-  border-collapse: collapse;
+ border: 1px solid #ced4dabb;
+ 
   width: 100%;
   padding: 2px;
+  border-radius: 5px;
     }
      .table-total-new  td{
   text-align: right;
   padding-right: 5px;
+  width: 200px;
     }
 
 @media screen and (min-width: 1099px) and (max-width: 1300px) {
     .card {
-        zoom: 70% !important
+        zoom: 75% !important
     }
 }
 @media screen and (min-width: 992px) and (max-width: 1099px) {
