--- a/relinksys/web/src/app/sale/bill-list/bill-list.component.html
+++ b/relinksys/web/src/app/sale/bill-list/bill-list.component.html
@@ -8,7 +8,7 @@
               <!-- Bill all Customer Wise-->
               <div *ngIf="this.id === '0'" class="row">
                 <div class="col-lg-1 col-md-2 col-10 ">
-                  <h2>Bill Serach</h2>
+                  <h2>Bill Search </h2>
                 </div>
                 <!-- <div class="ps-md-0 ps-1 pt-1" style="width: 40px;">
                                   <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="false" type="button"
