--- a/relinksys/web/src/app/sale/bill-list/bill-list.component.html
+++ b/relinksys/web/src/app/sale/bill-list/bill-list.component.html
@@ -641,7 +641,7 @@
                         mat-raised-button color="primary">Apply Payment</button>
                     </div>
                     <div class="col-xl-3 col-lg-3 col-md-4 col-8 ps-md-4 ps-md-0">
-                      <button [disabled]="applyPayment.CustomerCredit === 0" type="button" mat-raised-button
+                      <button type="button" [disabled]="applyPayment.CustomerCredit === 0" type="button" mat-raised-button
                         color="primary">
                         Credit Note
                       </button>
@@ -730,7 +730,7 @@
                             </mat-form-field>
                           </div>
                           <div class="col-xl-3 col-lg-4 col-md-6 col-4 ">
-                            <button [disabled]="f7.invalid || otpChecked === true || applyReward.PaidAmount === 0"
+                            <button type="button" [disabled]="f7.invalid || otpChecked === true || applyReward.PaidAmount === 0"
                               mat-raised-button color="primary" (click)="sendOtpForAppliedReward()">Send Otp</button>
                           </div>
                         </div>
@@ -762,7 +762,7 @@
                           </div>
 
                           <div class="col-xl-3 col-lg-4 col-md-6 col-4">
-                            <button (click)="onRewardSubmit()"
+                            <button (click)="onRewardSubmit()" type="button"
                               [disabled]="f7.invalid || otpChecked === false || applyReward.Otp === null"
                               mat-raised-button color="primary">Apply Reward</button>
                           </div>
@@ -770,7 +770,7 @@
                       </form>
                     </div>
                   </div>
-                  <div class="col-lg-6 col-md-7 col-12 mt-5 mt-md-0 ms-auto">
+                  <div class="col-lg-6 col-md-6 col-12 mt-5 mt-md-0 ms-auto">
                     <div class="table-responsive "
                       style="border: 1px solid #ff5100;overflow-x: scroll; max-height: 200px;">
                       <table class="table table-striped table-hover table-sm table-bordered"
